--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>FARAZ</title>
 <h1>HEADING 1</h1>
 </head>
 
 <body>
     <p>Lorem ipsum dolor sit amet.</p>
+    <h2>Lorem </h2>
 </body>
 </html>
