--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@
     <p>Lorem ipsum dolor sit amet.</p>
     <h2>Lorem </h2>
     <h1>MUSAKOV YANGI BRANCH</h1>
+
+    <p>
+        Naqorat:
+Oltin bu vodiylar — jon Oʻzbekiston,
+Ajdodlar mardona ruhi senga yor!
+Ulugʻ xalq qudrati joʻsh urgan zamon,
+Olamni mahliyo aylagan diyor!
+    </p>
 </body>
 </html>
